# server_for_file_transer

./: .env  Cargo.toml  Dockerfile  Readme.txt
config/: log4rs.yaml
src/: functions.rs  http_render.rs  main.rs  models.rs  schema.rs
