[package]
name = "thread_db_render_ref"
version = "0.1.0"
authors = ["tonyl <tonylee3737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
tera = "1.5.0"
serde = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json","multipart"] }
ftp = "3.0.1"
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2", "numeric"] }
actix-identity = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
pwhash = "1"
log = "0.4.0"
log4rs = "1.0.0"